--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: my_portfolio
 description: "A new Flutter project."
-publish_to: 'none' 
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
@@ -18,10 +18,8 @@ dev_dependencies:
 
   flutter_lints: ^5.0.0
 
-
-
 flutter:
-
   uses-material-design: true
   assets:
     - lib/assets/
+    - lib/assets/projects/
