--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 .DS_Store
 .atom/
 .buildlog/
+.build/
 .history
 .svn/
 .swiftpm/
@@ -29,6 +30,7 @@ migrate_working_dir/
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
+/build/
 /coverage/
 
 # Symbolication related
